# arbitrage-timer

./: Cargo.toml  README.md
src/: main.rs  types.rs
src/exchanges/: binance.rs  gate_io.rs  gateio.rs  hyperliquid.rs  mod.rs
