[package]
name = "arbitrage-timings"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
native-tls = "0.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
